human-intervention-logs/org.jboss.shrinkwrap:shrinkwrap-spi:1.2.3/gradle-test/gradle-test-2026-05-04T13-55-53-393266Z.log
Starting a Gradle Daemon, 8 busy and 7 incompatible and 168 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest FAILED
====================
Testing library: org.jboss.shrinkwrap:shrinkwrap-spi:1.2.3
Command: `/home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5787-627067d4/gradlew nativeTest`
Executing test...
-------
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :jar
> Task :checkTestTimeoutAnnotations
> Task :processTestResources NO-SOURCE
> Task :tck-test-support:compileJava
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes
> Task :tck-test-support:jar

/home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5787-627067d4/tests/src/org.jboss.shrinkwrap/shrinkwrap-spi/1.2.3/src/test/java/org_jboss_shrinkwrap/shrinkwrap_spi/Shrinkwrap_spiTest.java:357: error: InMemoryMemoryMapArchive is not abstract and does not override abstract method shallowCopy(Filter<ArchivePath>) in Archive
> Task :compileTestJava FAILED
    private static final class InMemoryMemoryMapArchive implements MemoryMapArchive,

                         ^
[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5787-627067d4/tests/src/org.jboss.shrinkwrap/shrinkwrap-spi/1.2.3/build/reports/problems/problems-report.html
Note: /home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5787-627067d4/tests/src/org.jboss.shrinkwrap/shrinkwrap-spi/1.2.3/src/test/java/org_jboss_shrinkwrap/shrinkwrap_spi/Shrinkwrap_spiTest.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error

FAILURE: Build failed with an exception.

* What went wrong:

Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.
  Note: /home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5787-627067d4/tests/src/org.jboss.shrinkwrap/shrinkwrap-spi/1.2.3/src/test/java/org_jboss_shrinkwrap/shrinkwrap_spi/Shrinkwrap_spiTest.java uses or overrides a deprecated API.

  Note: Recompile with -Xlint:deprecation for details.
You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.
  /home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5787-627067d4/tests/src/org.jboss.shrinkwrap/shrinkwrap-spi/1.2.3/src/test/java/org_jboss_shrinkwrap/shrinkwrap_spi/Shrinkwrap_spiTest.java:357: error: InMemoryMemoryMapArchive is not abstract and does not override abstract method shallowCopy(Filter<ArchivePath>) in Archive

      private static final class InMemoryMemoryMapArchive implements MemoryMapArchive,
For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
                           ^
13 actionable tasks: 5 executed, 8 up-to-date
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 838ms

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5787-627067d4/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.jboss.shrinkwrap:shrinkwrap-spi:1.2.3 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 3s
9 actionable tasks: 1 executed, 8 up-to-date
